--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -249,3 +249,9 @@ body {
     text-wrap: balance;
   }
 }
+
+@media screen and (max-width:768px ){
+  .text-intro {
+    font-size: 1.5rem;
+  }
+}
